Refactor and change the Settings style according to our needs
- Add XOSP palette (Midnight and Blue one)
- Add new XOSP Settings dashboard icons
- Update colors and styles
- Some other visual changes in Dashboard

Signed-off-by: Calin <nilac8991@gmail.com>

--- a/res/drawable/ic_print.xml
+++ b/res/drawable/ic_print.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2014 The Android Open Source Project
+<!-- Copyright (C) 2016 The Xperia Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -13,7 +13,18 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
-<bitmap xmlns:android="http://schemas.android.com/apk/res/android"
-    android:src="@*android:drawable/ic_print"
-    android:tint="@*android:color/material_deep_teal_500" />
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:viewportWidth="612"
+    android:viewportHeight="792"
+    android:width="612dp"
+    android:height="792dp">
+    <path
+        android:pathData="M306.01465 698.2168C147.18506 703.52148 4.3139648 563.54883 5.1308594 397.36035 5.9340821 233.35254 144.06787 94.172852 309.80859 95.533203 466.70703 96.818359 611.05469 230.04395 608.83984 402.8291 606.76172 565.12793 466.29687 704.22559 306.01465 698.2168ZM201.95117 411.25781c-17.55469 0 -32.4331 0.22559 -47.29785 -0.0615 -16.34814 -0.31445 -22.97217 7.72461 -22.6543 23.64551 0.50928 25.62793 -0.18457 51.29004 0.57422 76.91113 0.63233 21.32129 3.39063 24.5 24.58545 24.58203 100.2251 0.39649 200.45361 0.0547 300.68213 0.30078 15.72949 0.041 24.05566 -5.74219 23.89844 -22.33984 -0.25293 -26.80371 -0.14356 -53.61426 0.21191 -80.41113 0.21875 -16.33789 -7.64258 -23.23536 -23.57715 -22.70899 -12.44824 0.41699 -24.91699 0.082 -39.32714 0.082 0 -24.34277 -0.71094 -45.14453 0.24609 -65.87793 0.63574 -13.84961 -2.90527 -24.43847 -13.52149 -33.89941 -26.82421 -23.91895 -52.62304 -48.99317 -79.50195 -72.85059 -5.55078 -4.92187 -13.9043 -9.12597 -21.08887 -9.33789 -33.47216 -0.97754 -66.99218 -0.43066 -103.22949 -0.43066 0 61.83789 0 120.69531 0 182.39648z"
+        android:fillColor="@color/theme_accent" />
+    <path
+        android:pathData="M237.81934 409.32324c50.4458 0 97.44628 0 144.43652 0 0 -25.82617 0 -49.58105 0 -76.25488 -25.75781 0 -49.56055 0 -76.41211 0 0 -24.39063 0 -45.8418 0 -66.55469 -24.66748 0 -46.05371 0 -68.02441 0 0 48.41895 0 94.56153 0 142.80957z"
+        android:fillColor="#fdfcfe" />
+    <path
+        android:pathData="M237.81934 409.32324c0 -48.24804 0 -94.39062 0 -142.80957 21.9707 0 43.35693 0 68.02441 0 0 20.71289 0 42.16406 0 66.55469 26.85156 0 50.6543 0 76.41211 0 0 26.67383 0 50.42871 0 76.25488 -46.99024 0 -93.99072 0 -144.43652 0z"
+        android:fillColor="@color/theme_accent" />
+</vector>
