--- a/res/color/lock_pattern_view_success_color.xml
+++ b/res/color/lock_pattern_view_success_color.xml
@@ -15,5 +15,5 @@
 -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="?android:attr/colorAccent" />
+    <item android:color="@color/theme_primary" />
 </selector>
