--- a/res/xml/xosp_statusbar_cat.xml
+++ b/res/xml/xosp_statusbar_cat.xml
@@ -58,13 +58,13 @@
         android:entryValues="@array/status_bar_battery_style_values"
         android:defaultValue="6" />
 
-    <!--<cyanogenmod.preference.CMSystemSettingListPreference
+    <cyanogenmod.preference.CMSystemSettingListPreference
         android:key="status_bar_show_battery_percent"
         android:title="@string/status_bar_battery_percentage_title"
         android:summary="%s"
         android:dialogTitle="@string/status_bar_battery_percentage_title"
         android:entries="@array/status_bar_battery_percentage_entries"
-    android:entryValues="@array/status_bar_battery_percentage_values" /> -->
+        android:entryValues="@array/status_bar_battery_percentage_values" />
 
     <cyanogenmod.preference.CMSystemSettingListPreference
         android:key="qs_quick_pulldown"
