--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -403,4 +403,7 @@
     <string name="status_bar_double_tap_to_sleep_title">Double-tap to sleep</string>
     <string name="status_bar_double_tap_to_sleep_summary">Double-tap on the status bar to turn off the display</string>
 
+    <string name="status_bar_show_weather_title">Show weather</string>
+    <string name="status_bar_show_weather_summary">Display the current temperature on the status bar</string>
+
 </resources>
