--- a/res/values/xosp_strings.xml
+++ b/res/values/xosp_strings.xml
@@ -65,4 +65,7 @@
     <string name="sim_mobile_network_settings_category_title">Mobile network settings</string>
     <string name="sim_mobile_network_settings_title">SIM %d settings</string>
 
+    <!-- Notification importance -->
+    <string name="tuner_full_importance_settings">Power notification controls</string>
+
 </resources>
