--- a/res/values/cm_plurals.xml
+++ b/res/values/cm_plurals.xml
@@ -19,4 +19,8 @@
         <item quantity="one">once</item>
         <item quantity="other">%d times</item>
     </plurals>
+    <plurals name="backlight_timeout_time">
+        <item quantity="one"><xliff:g id="seconds">%d</xliff:g> second</item>
+        <item quantity="other"><xliff:g id="seconds">%d</xliff:g> seconds</item>
+    </plurals>
 </resources>
