--- a/res/values/xosp_strings.xml
+++ b/res/values/xosp_strings.xml
@@ -42,4 +42,8 @@
     <string name="notification_drawer_title">Notification Drawer Personalizations</string>
     <string name="header_cat">Notification Header</string>
 
+    <!-- XOSP NavBar Switch -->
+    <string name ="xosp_navbar_switch_title">XOSP NavBar Switch </string>
+    <string name ="xosp_navbar_switch_summary">Change NavBar icons to the old ones from MarshMallow</string>
+
 </resources>
