--- a/res/xml/xosp_blur_cat.xml
+++ b/res/xml/xosp_blur_cat.xml
@@ -19,6 +19,76 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/xosp_settings_blur_cat">
 
-    <!-- ..... -->
+    <Preference
+        style="?android:preferenceInformationStyle"
+        android:title="@string/blur_cat_notice"
+        android:summary="@string/blur_cat_notice_summary"
+        android:selectable="false" />
 
+    <PreferenceCategory
+        android:key="blur_expstatus_cat"
+        android:title="@string/blur_expstatus_cat" >
+
+        <SwitchPreference
+            android:key="blurred_status_bar_expanded_enabled_pref"
+            android:title="@string/blurred_status_bar_expanded_enabled_pref"
+            android:summary="@string/blurred_status_bar_expanded_enabled_pref_summary"
+            android:defaultValue="false" />
+
+        <com.android.settings.xosp.CustomSeekBarPreference
+            android:key="statusbar_blur_scale"
+            android:title="@string/blurred_scale"
+            android:summary="@string/blurred_scale_summary"
+            android:max="20"
+            settings:min="1"
+            android:dependency="blurred_status_bar_expanded_enabled_pref"
+            android:defaultValue="10" />
+
+        <com.android.settings.xosp.CustomSeekBarPreference
+            android:key="statusbar_blur_radius"
+            android:title="@string/blurred_radius"
+            android:summary="@string/blurred_radius_summary"
+            android:max="25"
+            settings:min="1"
+            android:dependency="blurred_status_bar_expanded_enabled_pref"
+            android:defaultValue="5" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="blur_notifications_cat"
+        android:title="@string/blur_notifications_cat" >   
+
+        <SwitchPreference
+            android:key="translucent_notifications_pref"
+            android:title="@string/translucent_notifications_pref"
+            android:summary="@string/translucent_notifications_pref_summary"
+            android:defaultValue="false" />
+
+        <com.android.settings.xosp.CustomSeekBarPreference
+            android:key="notifications_transluency"
+            android:title="@string/transluency_level_universal"
+            android:max="100"
+            settings:min="0"
+            android:dependency="translucent_notifications_pref"
+            android:defaultValue="60" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="blur_qs_cat"
+        android:title="@string/blur_qs_cat" >
+
+        <SwitchPreference
+            android:key="translucent_quick_settings_pref"
+            android:title="@string/translucent_quick_settings_pref"
+            android:summary="@string/translucent_quick_settings_pref_summary"
+            android:defaultValue="false" />
+
+        <com.android.settings.xosp.CustomSeekBarPreference
+            android:key="quick_settings_transluency"
+            android:title="@string/transluency_level_universal"
+            android:max="100"
+            settings:min="0"
+            android:dependency="translucent_quick_settings_pref"
+            android:defaultValue="60" />
+    </PreferenceCategory>
 </PreferenceScreen>
