Blur: Translucent notifications are not yet ready
Signed-off-by: Calin <nilac8991@gmail.com>

--- a/res/xml/xosp_blur_cat.xml
+++ b/res/xml/xosp_blur_cat.xml
@@ -54,7 +54,7 @@
             android:defaultValue="5" />
     </PreferenceCategory>
 
-    <PreferenceCategory
+    <!--<PreferenceCategory
         android:key="blur_notifications_cat"
         android:title="@string/blur_notifications_cat" >   
 
@@ -71,7 +71,7 @@
             settings:min="0"
             android:dependency="translucent_notifications_pref"
             android:defaultValue="60" />
-    </PreferenceCategory>
+    </PreferenceCategory>-->
 
     <PreferenceCategory
         android:key="blur_qs_cat"
