--- a/res/values/cm_arrays.xml
+++ b/res/values/cm_arrays.xml
@@ -333,4 +333,14 @@
         <item>2</item>
     </string-array>
 
+    <string-array name="power_menu_actions_array" translatable="false">
+        <item>power</item>
+        <item>restart</item>
+        <item>screenshot</item>
+        <item>airplane</item>
+        <item>users</item>
+        <item>bugreport</item>
+        <item>silent</item>
+    </string-array>
+
 </resources>
