--- a/res/xml/xosp_buttons_cat.xml
+++ b/res/xml/xosp_buttons_cat.xml
@@ -79,7 +79,7 @@
         <PreferenceScreen
             android:key="power_menu"
             android:title="@string/power_menu_title"
-            android:fragment="org.cyanogenmod.cmparts.input.PowerMenuActions" />
+            android:fragment="com.android.settings.cyanogenmod.PowerMenuActions" />
 
         <SwitchPreference
             android:key="power_end_call"
