Settings: Forward Port Volume Long Press Skip Tracks (2/2)
Bring Forward Volume Rocker Track Change

Change-Id: Ifa3d0987a0d54afd1f56e1d4a7488f428338c757
Signed-off-by: Calin <nilac8991@gmail.com>

--- a/res/values/xosp_strings.xml
+++ b/res/values/xosp_strings.xml
@@ -175,4 +175,7 @@
     <string name="action_last_app">Launch last app</string>
     <string name="action_splitscreen">Splitscreen</string>
 
+    <string name="volbtn_music_controls_title">Playback control</string>
+    <string name="volbtn_music_controls_summary">When the screen is off, long pressing the volume keys will seek music tracks</string>
+
   </resources>
