--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -18,56 +18,56 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         android:title="@string/about_settings">
 
-        <!-- XOSP Banner -->
-        <PreferenceScreen android:key="xosp_logo"
-            android:enabled="false"
-            android:selectable="false"
-            android:layout="@layout/xosp_banner" />
+    <!-- XOSP Banner -->
+    <PreferenceScreen android:key="xosp_logo"
+        android:enabled="false"
+        android:selectable="false"
+        android:layout="@layout/xosp_banner" />
         
-        <PreferenceCategory
-			android:title="@string/device_info_xosp_category">
+    <PreferenceCategory
+		android:title="@string/device_info_xosp_category">
 
-			<!-- XOSP Revision -->
-            <Preference android:key="xosp_revision"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/xosp_revision"
-                android:summary="@string/device_info_default" />
+		<!-- XOSP Revision -->
+        <Preference android:key="xosp_revision"
+            android:enabled="false"
+            android:shouldDisableView="false"
+            android:title="@string/xosp_revision"
+            android:summary="@string/device_info_default" />
 
-            <!-- XOSP Release -->
-            <Preference android:key="xosp_release"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/xosp_release"
-				android:summary="@string/device_info_default" />
+        <!-- XOSP Release -->
+        <Preference android:key="xosp_release"
+            android:enabled="false"
+            android:shouldDisableView="false"
+            android:title="@string/xosp_release"
+			android:summary="@string/device_info_default" />
 
-			<!-- Mod version -->
-        	<Preference android:key="mod_version"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/mod_version"
-                android:summary="@string/mod_version_default" />
+		<!-- Mod version -->
+    	<Preference android:key="mod_version"
+            android:enabled="false"
+            android:shouldDisableView="false"
+            android:title="@string/mod_version"
+            android:summary="@string/mod_version_default" />
 
-            <!-- Build date -->
-        	<Preference android:key="build_date"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/build_date"
-                android:summary="@string/build_date_default" />
+        <!-- Build date -->
+    	<Preference android:key="build_date"
+            android:enabled="false"
+            android:shouldDisableView="false"
+            android:title="@string/build_date"
+            android:summary="@string/build_date_default" />
 
-            <!-- Detailed build version -->
-        	<Preference android:key="build_number"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/build_number"
-                android:summary="@string/device_info_default"/>
+        <!-- Detailed build version -->
+    	<Preference android:key="build_number"
+            android:enabled="false"
+            android:shouldDisableView="false"
+            android:title="@string/build_number"
+            android:summary="@string/device_info_default"/>
 
-        </PreferenceCategory>
+    </PreferenceCategory>
 
-        <PreferenceCategory
-			android:title="@string/device_info_device_category">
+    <PreferenceCategory
+		android:title="@string/device_info_device_category">
 
-			<!-- Device status - launches activity -->
+    	<!-- Device status - launches activity -->
         <PreferenceScreen android:key="status_info"
                 android:title="@string/device_status"
                 android:summary="@string/device_status_summary">
@@ -76,63 +76,70 @@
                     android:targetClass="com.android.settings.Settings$StatusActivity" />
         </PreferenceScreen>
 
-        	<!-- Device hardware model -->
-        	<Preference android:key="device_model"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/model_number"
-                android:summary="@string/device_info_default"/>
+        <!-- Device name -->
+        <Preference android:key="device_name"
+            android:enabled="false"
+            android:shouldDisableView="false"
+            android:title="@string/device_name"
+            android:summary="@string/device_info_default"/>
 
-            <!-- Device Baseband version -->
-        	<Preference android:key="baseband_version"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/baseband_version"
-                android:summary="@string/device_info_default"/>
+    	<!-- Device hardware model -->
+    	<Preference android:key="device_model"
+            android:enabled="false"
+            android:shouldDisableView="false"
+            android:title="@string/device_model"
+            android:summary="@string/device_info_default"/>
 
-            <!-- Device Kernel version -->
-        	<Preference android:key="kernel_version"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/kernel_version"
-                android:summary="@string/device_info_default"/>
+        <!-- Device Baseband version -->
+    	<Preference android:key="baseband_version"
+            android:enabled="false"
+            android:shouldDisableView="false"
+            android:title="@string/baseband_version"
+            android:summary="@string/device_info_default"/>
+
+        <!-- Device Kernel version -->
+    	<Preference android:key="kernel_version"
+            android:enabled="false"
+            android:shouldDisableView="false"
+            android:title="@string/kernel_version"
+            android:summary="@string/device_info_default"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+		android:title="@string/device_info_android_category">
+
+		<!-- Device firmware version -->
+    	<Preference android:key="firmware_version"
+            android:enabled="false"
+            android:shouldDisableView="false"
+            android:title="@string/firmware_version"
+            android:summary="@string/device_info_default"/>
+
+        <!-- Security patch level -->
+        <Preference android:key="security_patch"
+            android:enabled="false"
+            android:shouldDisableView="false"
+            android:title="@string/security_patch"
+            android:summary="@string/device_info_default"/>
+
+        <!-- SELinux status information -->
+    	<Preference android:key="selinux_status"
+            android:enabled="false"
+            android:shouldDisableView="false"
+            android:title="@string/selinux_status"
+            android:summary="@string/selinux_status_enforcing"/>
 
         </PreferenceCategory>
 
-        <PreferenceCategory
-			android:title="@string/device_info_android_category">
-
-			<!-- Device firmware version -->
-        	<Preference android:key="firmware_version"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/firmware_version"
-                android:summary="@string/device_info_default"/>
-
-	        <!-- Security patch level -->
-	        <Preference android:key="security_patch"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/security_patch"
-                android:summary="@string/device_info_default"/>
-
-            <!-- SELinux status information -->
-        	<Preference android:key="selinux_status"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/selinux_status"
-                android:summary="@string/selinux_status_enforcing"/>
-
-        </PreferenceCategory>
-
-        <PreferenceCategory
-			android:title="@string/device_info_other_category">
+    <PreferenceCategory
+		android:title="@string/device_info_other_category">
 
         <!-- Legal Information -->
         <PreferenceScreen
-                android:key="container"
-                android:title="@string/legal_information"
-                android:fragment="com.android.settings.LegalSettings" />
+            android:key="container"
+            android:title="@string/legal_information"
+            android:fragment="com.android.settings.LegalSettings" />
 
 	</PreferenceCategory>
 
