--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -41,6 +41,15 @@
             android:title="@string/xosp_release"
 			android:summary="@string/device_info_default" />
 
+
+        <!-- XOSPApps -->
+        <Preference android:key="xosp_apps"
+            style="?android:preferenceInformationStyle"
+            android:enabled="false"
+            android:shouldDisableView="false"
+            android:title="@string/xospapps_title"
+            android:summary="@string/xospapps_default_string" />
+
 		<!-- Mod version -->
     	<Preference android:key="mod_version"
             android:enabled="false"
