Import XOSPApps verification Preference from MM
Signed-off-by: Calin <nilac8991@gmail.com>

--- a/res/values/xosp_strings.xml
+++ b/res/values/xosp_strings.xml
@@ -29,6 +29,10 @@
     <string name="build_date">Build date</string>
     <string name="build_date_default">2015-01-01-0000</string>
 
+    <!-- XOSPApps -->
+    <string name="xospapps_title">XOSPApps status</string>
+    <string name="xospapps_default_string">Not installed</string>
+
     <!-- [CHAR LIMIT=NONE] Device Info screen. Countdown for user taps to enable development settings -->
     <plurals name="show_dev_countdown_xosp">
         <item quantity="one">You are now <xliff:g id="step_count">%1$d</xliff:g> step away from enabling development settings.</item>
