[2/2] settings: support setting a separate encryption password
Change-Id: Ie6de65f280d3dcbc56f198142b8c30ea7f0ae0bd

--- a/res/values/xosp_strings.xml
+++ b/res/values/xosp_strings.xml
@@ -82,4 +82,11 @@
     <string name="security_settings_fingerprint_sensor_location_left">left side</string>
     <string name="security_settings_fingerprint_sensor_location_right">right side</string>
 
+    <!-- Encryption password -->
+    <string name="crypt_keeper_change_password_title">Change encryption password</string>
+    <string name="crypt_keeper_change_password_summary">Change the password used for device encryption</string>
+    <string name="crypt_keeper_choose_your_password_header">Set encryption password</string>
+    <string name="crypt_keeper_replace_password_title">Replace encryption password</string>
+    <string name="crypt_keeper_replace_password_summary">Remove the separate encryption password</string>
+
 </resources>
