--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -113,7 +113,7 @@
     <color name="importance_disabled_slider_color">@*android:color/material_grey_300</color>
     <color name="importance_secondary_slider_color">#858383</color>
     <color name="usage_graph_dots">#B0BEC5</color>
-    <color name="card_background_grey">#eeeeee</color>
+    <color name="card_background_grey">#fff</color>
 
     <!-- Gestures settings -->
     <color name="gestures_setting_background_color">#f5f5f5</color>
