--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -71,7 +71,7 @@
     <color name="running_processes_system_ram">@color/xosp_midnight_palette_600</color>
     <color name="running_processes_free_ram">@color/theme_primary_dark</color>
 
-    <color name="card_background">#fffafafa</color>
+    <color name="card_background">#fff</color>
 
     <color name="wifi_divider">#ffe0e0e0</color>
     <color name="sim_noitification">@color/xosp_blue_palette_300</color>
