ColorPicker Rework For XOSP N
XOSP N edits: (Based on the modifications made for RR)

Make this shit finally work on N Support libraries

Signed-off-by: Calin <nilac8991@gmail.com>
Signed-off-by: Varun Date <date.varun123@gmail.com>

--- a/res/layout/color_picker_action_apply_color.xml
+++ b/res/layout/color_picker_action_apply_color.xml
@@ -15,7 +15,7 @@
      limitations under the License.
 -->
 
-<net.margaritov.preference.colorpicker.ApplyColorView
+<net.margaritov.preference.colorpicker.widget.ApplyColorView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/color_picker_apply_color_action_layout"
     android:layout_width="@dimen/color_picker_action_apply_color_width"
@@ -46,4 +46,4 @@
         android:scaleType="centerInside"
         android:visibility="invisible" />
 
-</net.margaritov.preference.colorpicker.ApplyColorView>
+</net.margaritov.preference.colorpicker.widget.ApplyColorView>
