--- a/res/layout/color_picker_color_button.xml
+++ b/res/layout/color_picker_color_button.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 
-     Copyright (C) 2015 DarkKat
+     Copyright (C) 2016 DarkKat
 
      Licensed under the Apache License, Version 2.0 (the "License"); 
      you may not use this file except in compliance with the License.
@@ -15,7 +15,7 @@
      limitations under the License.
 -->
 
-<net.margaritov.preference.colorpicker.ColorViewButton
+<net.margaritov.preference.colorpicker.widget.ColorViewButton
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="0px"
     android:layout_height="wrap_content"
@@ -39,4 +39,4 @@
         android:textSize="@dimen/color_picker_color_button_value_text_size"
         android:textColor="?android:attr/textColorSecondary" />
 
-</net.margaritov.preference.colorpicker.ColorViewButton>
+</net.margaritov.preference.colorpicker.widget.ColorViewButton>
