--- a/res/layout/color_picker_fragment.xml
+++ b/res/layout/color_picker_fragment.xml
@@ -19,9 +19,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkkat_blue_grey">
+    android:background="?android:attr/colorBackground">
 
-    <net.margaritov.preference.colorpicker.ColorPickerView
+    <net.margaritov.preference.colorpicker.widget.ColorPickerView
         android:id="@+id/color_picker_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
