--- a/res/layout-land/color_picker_fragment.xml
+++ b/res/layout-land/color_picker_fragment.xml
@@ -19,7 +19,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkkat_blue_grey">
+    android:background="?android:attr/colorBackground">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,7 +27,7 @@
         android:layout_alignParentTop="true"
         android:orientation="horizontal">
 
-        <net.margaritov.preference.colorpicker.ColorPickerView 
+        <net.margaritov.preference.colorpicker.widget.ColorPickerView 
             android:id="@+id/color_picker_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
