--- a/res/layout/color_picker_palette_color_buttons_layout.xml
+++ b/res/layout/color_picker_palette_color_buttons_layout.xml
@@ -20,7 +20,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/color_picker_color_buttons_container_margin_bottom"
-    android:background="@color/darkkat_blue_grey"
+    android:background="?android:attr/colorBackground"
     android:orientation="vertical">
 
     <TextView
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/color_picker_color_buttons_title_margin_start"
         android:textSize="@dimen/color_picker_color_button_title_name_text_size"
-        android:textColor="@color/theme_accent" />
+        android:textColor="?android:attr/colorAccent" />
 
     <LinearLayout
         android:layout_width="match_parent"
