--- a/res/menu/palette.xml
+++ b/res/menu/palette.xml
@@ -15,8 +15,8 @@
 -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/palette_darkkat"
-        android:title="@string/palette_darkkat_title"
+    <item android:id="@+id/xosp_flat_palette"
+        android:title="@string/palette_xosp_title"
         />
     <item android:id="@+id/palette_material"
         android:title="@string/palette_material_title"
