--- a/res/menu/reset.xml
+++ b/res/menu/reset.xml
@@ -18,8 +18,8 @@
     <item android:id="@+id/reset_android"
         android:title="@string/reset_android_title"
         />
-    <item android:id="@+id/reset_darkkat"
-        android:title="@string/reset_darkkat_title"
+    <item android:id="@+id/reset_xosp"
+        android:title="@string/reset_xosp_title"
         />
 </menu>
 
