--- a/res/values/xosp_arrays.xml
+++ b/res/values/xosp_arrays.xml
@@ -16,40 +16,40 @@
 
 <resources>
 
-	<!-- Color picker -->
-	 <array name="color_picker_favorite_color_buttons">
-        <item>@id/favorite_color_button_1</item>
-        <item>@id/favorite_color_button_2</item>
-        <item>@id/favorite_color_button_3</item>
-        <item>@id/favorite_color_button_4</item>
+	 <!-- Color picker -->
+     <array name="color_picker_favorite_color_buttons">
+         <item>@id/favorite_color_button_1</item>
+         <item>@id/favorite_color_button_2</item>
+         <item>@id/favorite_color_button_3</item>
+         <item>@id/favorite_color_button_4</item>
      </array>
  
- 	 <array name="color_picker_palette_color_buttons_layouts">
-        <item>@id/color_buttons_dk</item>
-        <item>@id/color_buttons_material</item>
-        <item>@id/color_buttons_rgb</item>
+     <array name="color_picker_palette_color_buttons_layouts">
+         <item>@id/color_buttons_dk</item>
+         <item>@id/color_buttons_material</item>
+         <item>@id/color_buttons_rgb</item>
      </array>
-
+ 
      <array name="color_picker_palette_color_buttons">
-        <item>@id/palette_color_button_1</item>
-        <item>@id/palette_color_button_2</item>
-        <item>@id/palette_color_button_3</item>
-        <item>@id/palette_color_button_4</item>
-        <item>@id/palette_color_button_5</item>
-        <item>@id/palette_color_button_6</item>
-        <item>@id/palette_color_button_7</item>>
-        <item>@id/palette_color_button_8</item>
-	 </array>
-
-     <array name="color_picker_darkkat_palette">
-         <item>@color/black</item>
-         <item>@color/darkkat_blue_grey</item>
-         <item>@color/holo_blue_light</item>
-         <item>@color/material_deep_teal_500</item>
-         <item>@color/white</item>
-         <item>@color/material_indigo_500</item>
-         <item>@color/material_red_500</item>
-         <item>@color/material_purple_500</item>
+         <item>@id/palette_color_button_1</item>
+         <item>@id/palette_color_button_2</item>
+         <item>@id/palette_color_button_3</item>
+         <item>@id/palette_color_button_4</item>
+         <item>@id/palette_color_button_5</item>
+         <item>@id/palette_color_button_6</item>
+         <item>@id/palette_color_button_7</item>
+         <item>@id/palette_color_button_8</item>
+     </array>
+ 
+     <array name="color_picker_xosp_flat_palette">
+		 <item>@color/xosp_flat_turquoise</item>
+         <item>@color/xosp_flat_nephritis</item>
+         <item>@color/xosp_flat_pumpkin</item>
+         <item>@color/xosp_flat_alizarin</item>
+         <item>@color/xosp_flat_wisteria</item>
+         <item>@color/xosp_flat_midnightblue</item>
+         <item>@color/xosp_flat_wetasphalt</item>
+         <item>@color/xosp_flat_belizehole</item>
      </array>
  
      <array name="color_picker_material_palette">
@@ -72,6 +72,6 @@
          <item>@color/purple</item>
          <item>@color/yellow</item>
          <item>@color/orange</item>
-</array> 
+	 </array>
 
 </resources>
