--- a/res/values/xosp_colors.xml
+++ b/res/values/xosp_colors.xml
@@ -62,9 +62,11 @@
 
     <!-- Color Picker colors -->
     <color name="black">@android:color/black</color>
-    <drawable name="darkkat_bg_blue_grey">@*android:color/primary_material_dark</drawable>
+    
     <color name="white">@android:color/white</color>
-    <color name="darkkat_blue_grey">@*android:color/primary_material_dark</color>
+    <color name="color_picker_color_view_drawable_border">#33ffffff</color>
+    <color name="background_darkkat_blue_grey">#ff1b1f23</color>
+    <color name="colorpick_primary">@color/theme_accent</color>
     <color name="holo_blue_light">@android:color/holo_blue_light</color>
     <color name="material_deep_teal_500">@*android:color/material_deep_teal_500</color>
     <color name="material_indigo_500">#ff3f51b5</color>
@@ -74,20 +76,28 @@
     <color name="material_blue_500">#ff2196f3</color>
     <color name="material_yellow_500">#ffffeb3b</color>
     <color name="material_orange_500">#ffff9800</color>
+    <color name="red">#ffff0000</color>
     <color name="green">#ff00ff00</color>
     <color name="blue">#ff0000ff</color>
     <color name="purple">#ff800080</color>
     <color name="yellow">#ffffff00</color>
     <color name="orange">#ffffa500</color>
-    <color name="colorpick_primary">@*android:color/primary_material_dark</color>
-    <color name="colorpick_primary_dark">@*android:color/primary_material_dark</color>
-    <color name="colorpick_accent">@color/theme_accent</color>
-    <color name="color_picker_color_view_drawable_boarder">#33ffffff</color> 
-    <color name="secondary_text_material_dark">#B3FFFFFF</color>
-    <color name="secondary_text_material_light">#8A000000</color>
 
     <!-- Colors of the help screen -->
     <color name="color_picker_help_screen_background">#e0000000</color>
     <color name="color_picker_help_summary_text_color">#b3ffffff</color>
+
+    <!-- XOSP Color Picker flat colors -->
+    <color name="black">@android:color/black</color>
+    <color name="white">@android:color/white</color>
+    <color name="xosp_flat_turquoise">#ff1abc9c</color>
+    <color name="xosp_flat_nephritis">#ff27ae60</color>
+    <color name="xosp_flat_pumpkin">#ffd35400</color>
+    <color name="xosp_flat_alizarin">#ffe74c3c</color>
+    <color name="xosp_flat_wisteria">#ff8e44ad</color>
+    <color name="xosp_flat_midnightblue">#ff2c3e50</color>
+    <color name="xosp_flat_wetasphalt">#ff34495e</color>
+    <color name="xosp_flat_belizehole">#ff2980b9</color>
+    <color name="xosp_blue_grey">@color/xosp_flat_midnightblue</color>
 
 </resources>
