--- a/res/values/xosp_dimens.xml
+++ b/res/values/xosp_dimens.xml
@@ -17,13 +17,10 @@
 <resources>
     <dimen name="settings_tab_text">13.0dip</dimen>
 
-    <!-- Width and height of the color picker preference preview -->
-    <dimen name="color_picker_preference_preview_width_height">33dp</dimen>
+    <!-- Color picker -->
 
-    <!-- Color picker start -->
-
-    <!-- Width of the color picker color view drawable boarder -->
-    <dimen name="color_picker_color_view_drawable_boarder_width">1dp</dimen>
+    <!-- Width of the color picker color view drawable border -->
+    <dimen name="color_picker_color_view_drawable_border_width">1dp</dimen>
 
     <!-- Preference -->
 
@@ -146,7 +143,6 @@
 
     <!-- Text size of the color picker help screen summary text -->
     <dimen name="color_picker_help_screen_summary_text_size">12sp</dimen>
-
     <!-- Color picker end -->
 
 </resources>
