--- a/res/values/xosp_themes.xml
+++ b/res/values/xosp_themes.xml
@@ -1,4 +1,3 @@
-
 <?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (C) 2016 The Xperia Open Source Project
@@ -17,16 +16,18 @@
 -->
 <resources>
 
-    <style name="Theme.ColorPickerDialog" parent="@android:style/Theme.Material">
+    <!--<style name="Theme.ColorPickerDialog" parent="@android:style/Theme.Material">
         <item name="android:colorBackground">@color/colorpick_primary</item>
-        </style>
+    </style>
+    
     <style name="Theme.ColorPickerFragment" parent="@android:style/Theme.Material">
-        <item name="android:colorBackground">@color/darkkat_blue_grey</item>
-        <item name="android:windowBackground">@null</item>
+        <item name="android:colorBackground">@color/background_darkkat_blue_grey</item>
+        <item name="android:windowBackground">@null</item
+        >
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsFloating">false</item>
         <item name="android:colorPrimary">@color/colorpick_primary</item>
         <item name="android:colorPrimaryDark">@color/colorpick_primary_dark</item>
-        <item name="android:colorAccent">@color/colorpick_accent</item>
-    </style>
+        <item name="android:colorAccent">@color/theme_accent</item>
+    </style>-->
 </resources>
