Bring back Misc Category
Signed-off-by: Calin <nilac8991@gmail.com>

--- a/res/values/xosp_strings.xml
+++ b/res/values/xosp_strings.xml
@@ -106,6 +106,9 @@
     <string name="xosp_settings_blur_cat">Blur Personalizations</string>
     <string name="notification_drawer_title">Notification Drawer Personalizations</string>
     <string name="header_cat">Notification Header</string>
+
+    <!-- XOSP Misc category -->
+    <string name="xosp_misc_screen_title">Screen</string>
     
     <!-- XOSP External activities -->
     <string name="xosp_battery_adviser_activity">Sony Battery Adviser</string>
