--- a/res/values/xosp_strings.xml
+++ b/res/values/xosp_strings.xml
@@ -159,4 +159,8 @@
     <string name="color_picker_help_button_ok_title">OK</string>
     <!-- Color picker end -->
 
+    <!-- Double tap to sleep on lockscreen -->
+    <string name="double_tap_sleep_anywhere_title">DT2S on Lockscreen</string>
+    <string name="double_tap_sleep_anywhere_summary">Double tap lockscreen to put the device to sleep</string>
+
 </resources>
