--- a/res/xml/xosp_misc_cat.xml
+++ b/res/xml/xosp_misc_cat.xml
@@ -35,6 +35,13 @@
             android:title="@string/proximity_wake_title"
             android:summary="@string/proximity_wake_summary"
             cm:requiresConfig="@*cyanogenmod.platform:bool/config_proximityCheckOnWake" />
+
+        <!-- Double tap to sleep anywhere on the lockscreen -->
+        <SwitchPreference
+            android:key="double_tap_sleep_anywhere"
+            android:title="@string/double_tap_sleep_anywhere_title"
+            android:summary="@string/double_tap_sleep_anywhere_summary" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
