--- a/res/values/cm_arrays.xml
+++ b/res/values/cm_arrays.xml
@@ -346,6 +346,7 @@
         <item>users</item>
         <item>bugreport</item>
         <item>silent</item>
+    </string-array>
     <!-- Fingerprint sensor locations.  Devices should configure their sensor location using
          config_fingerprintSensorLocation -->
     <string-array name="security_settings_fingerprint_sensor_locations" translatable="false">
