--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -158,6 +158,12 @@
 
         </PreferenceCategory>
 
+    <Preference
+        style="?android:preferenceInformationStyle"
+        android:title="Winner of the Wallpapers Contest!"
+        android:summary="SkRusser"
+        android:selectable="false" />
+
     <PreferenceCategory
 		android:title="@string/device_info_other_category">
 
