Implement a simple About XOSP
- Include all our important links
- Add entry directly to DashBoard

Signed-off-by: Calin <nilac8991@gmail.com>

--- a/res/values/xosp_strings.xml
+++ b/res/values/xosp_strings.xml
@@ -125,6 +125,38 @@
     <!-- XOSP External activities -->
     <string name="xosp_equalizer_activity">Equalizer</string>
     
+    <!-- About XOSP -->
+    <string name="about_xosp">About XOSP</string>
+    <string name="about_xosp_summary">@null</string>
+    <string name="xosp_donate">Donate to the Development</string>
+    <string name="xosp_donate_summary">Like the ROM? Make a small donation!</string>
+    <string name="app_name">XOSP</string>
+    <string name="github_nilac">https://github.com/nilac8991</string>
+    <string name="xosp_links">XOSP Links</string>
+    <string name="xosp_source_title">XOSP Sources</string>
+    <string name="xosp_source_summary">XOSP sources on Github</string>
+    <string name="xosp_google_plus_title">Google+</string>
+    <string name="xosp_google_plus_summary">Join the community on Google+</string>
+    <string name="xosp_facebook_title">Facebook</string>
+    <string name="xosp_facebook_summary">Follow us also on our official page on FB</string>
+    <string name="xosp_downloads_site_title">XOSP Downloads Center</string>
+    <string name="xosp_downloads_site_summary">Stay up to date with the latest XOSP and XOSPApps builds!</string>
+    <string name="xosp_jenkins_site_title">XOSP Jenkins</string>
+    <string name="xosp_jenkins_site_summary">Our Jenkins server!</string>
+    <string name="xosp_site_title">XOSP Official Site</string>
+    <string name="xosp_site_summary">Visit our site!</string>
+    <string name="xosp_devices_source_title">XOSP Official Devices Sources</string>
+    <string name="xosp_devices_source_summary">XOSP devices sources on Github</string>
+    <string name="xosp_translations_title">XOSP Crowdin</string>
+    <string name="xosp_translations_summary">Contribute by translating XOSP in your language!</string>
+    <string name="xosp_teespring_title">XOSP Teespring Store</string>
+    <string name="xosp_teespring_summary">Visit our Teespring store for awesome merchandise!</string>
+    <string name="xosp_telegram_group_title">XOSP Telegram Community Group</string>
+    <string name="xosp_telegram_group_summary">Join our community group on Telegram</string>
+    <string name="xosp_telegram_channel_title">XOSP Telegram Channel</string>
+    <string name="xosp_telegram_channel_summary">Get latest XOSP news by following our Telegram channel</string>
+    <string name="xosp_about_intro_title">What is XOSP?</string>
+    <string name="xosp_about_intro_summary">XOSP,which stands for the Xperia Open Source Project is a project based on LineageOS and the main idea of this ROM is to create a custom minimal Xperia oriented experience,by including the essential things which a user would ever use from a ROM.</string>
     
     <!-- XOSP Equalizer Infos -->
     <string name="equalizer_question_one_title">Why no more ViPER?</string>
