--- a/res/xml/xosp_buttons_cat.xml
+++ b/res/xml/xosp_buttons_cat.xml
@@ -17,6 +17,10 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-        <!-- -->
+    <SwitchPreference
+        android:key="navigation_bar"
+        android:title="@string/enable_navigation_bar_title"
+        android:summary="@string/enable_navigation_bar_summary"
+        android:defaultValue="false" />
 
 </PreferenceScreen>
