--- a/res/values/xosp_strings.xml
+++ b/res/values/xosp_strings.xml
@@ -133,4 +133,8 @@
     <string name="proximity_wake_title">Prevent accidental wake-up</string>
     <string name="proximity_wake_summary">Check the proximity sensor prior to waking up screen</string>
 
+    <!-- On-Screen Navigation Bar -->
+    <string name="enable_navigation_bar_title">Enable software keys</string>
+    <string name="enable_navigation_bar_summary">Enable on-screen navigation keys</string>
+
   </resources>
