DeviceInfoSettings: fix XOSPBanner not being shown up
Signed-off-by: Calin <nilac8991@gmail.com>

--- a/res/layout/xosp_banner.xml
+++ b/res/layout/xosp_banner.xml
@@ -26,7 +26,7 @@
         android:visibility="invisible"
         />
     <ImageView
-        android:id="@+id/xosp_logo"
+        android:id="@+id/xosp_banner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
