Move About XOSP to About Phone
- Create a separate PreferenceScreen to launch the fragment

Signed-off-by: Calin <nilac8991@gmail.com>
Signed-off-by: XOSP <nilac8991@gmail.com>

--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -26,6 +26,13 @@
             android:selectable="false"
             android:layout="@layout/xosp_banner" />
 
+        <!-- About XOSP -->
+        <PreferenceScreen android:key="about_xosp"
+                android:title="@string/about_xosp"
+                android:summary="@string/about_xosp_summary"
+                android:fragment="com.android.settings.xosp.About">
+        </PreferenceScreen>
+
         <!-- Device status - launches activity -->
         <PreferenceScreen android:key="status_info"
                 android:title="@string/device_status"
