[2/2] Settings: Battery and Notification Lights     Put together from:
    Author: Roman Birg <roman@cyngn.com>
    Date:   Wed Jul 15 13:28:14 2015 -0700
    Settings: display light pulse dialog settings conditionally
    If the device doesn't support LED pulsing, don't show the settings.
    REF: CYNGNOS-403
    Change-Id: I2316a4fd7a3a27c9bc046eda3bd374acc1edcf37
    Signed-off-by: Roman Birg <roman@cyngn.com>

    Author: Roman Birg <roman@cyngn.com>
    Date:   Thu Jul 30 15:20:52 2015 -0700
    Settings: fix a few color picker inconsistentcies
    Don't assume we can pulse when calling setAllValues().
    Don't display both on/off pulse values when it cannot pulse.
    Default to Always on when we can't pulse.
    Ref: CYNGNOS-403
    Change-Id: Ie356cdc35cb545dd51896697f89ef265ada1147f
    Signed-off-by: Roman Birg <roman@cyngn.com>

    Author: Roman Birg <roman@cyngn.com>
    Date:   Mon Jul 13 14:45:24 2015 -0700
    Settings: fix setting light FC
    We need to check whether the speed setting is enabled before returning a
    value that may be null.
    REF: CYNGNOS-435
    Change-Id: I1bc047f4d060853dac15744e529981ee5968cc4c
    Signed-off-by: Roman Birg <roman@cyngn.com>

    Author: Roman Birg <roman@cyngn.com>
    Date:   Fri Jul 10 15:46:18 2015 -0700
    Settings: hide light pulse settings if not available
    Instead of disabling the pulse length and speed hide them, since they
    will not be enabled during the lifetime of the dialog
    REF: CYNGNOS-426
    Change-Id: Ie0c8b9f27e1de32c9559e5ffdb61c73d8b2ff42f
    Signed-off-by: Roman Birg <roman@cyngn.com>

    Author: d34d <clark@cyngn.com>
    Date:   Mon Jun 15 16:05:13 2015 -0700
    BatteryLight: Reset all settings back to default
    This patch resets all the settings for BatteryLightSettings when
    the user presses reset, for a more consistent UX.
    Change-Id: I5b705a02b9df686eea8af5afd4d552897926d0e3

    Author: Sam Mortimer <sam@mortimer.me.uk>
    Date:   Mon Nov 24 21:51:27 2014 -

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -19,6 +19,22 @@
         android:title="@string/display_settings"
         settings:keywords="@string/keywords_display">
 
+    <PreferenceCategory
+        android:key="leds"
+        android:title="@string/led_category" >
+
+        <PreferenceScreen
+            android:key="notification_light"
+            android:title="@string/notification_light_title"
+            android:fragment="com.android.settings.xosp.notificationlight.NotificationLightSettings" />
+
+        <PreferenceScreen
+            android:key="battery_light"
+            android:title="@string/battery_light_title"
+            android:fragment="com.android.settings.xosp.notificationlight.BatteryLightSettings" />
+
+    </PreferenceCategory>
+
         <PreferenceScreen
                 android:key="brightness"
                 android:title="@string/brightness"
