--- a/res/values/xosp_bools.xml
+++ b/res/values/xosp_bools.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2016 The Xperia Open Source Project
+<!-- Copyright (C) 2017 The Xperia Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -13,10 +13,9 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
 <resources>
-    <dimen name="settings_tab_text">13.0dip</dimen>
-
-    <dimen name="oval_notification_size">26dp</dimen>
+    <!-- Default value for battery_light_enabled preference -->
+    <bool name="def_battery_light_enabled">true</bool>
+    <!-- Default value for battery light pulse -->
+    <bool name="def_battery_light_pulse">true</bool>
 </resources>
- 
