Unbreak NotificationLight options
- Fix imports
- Use SystemSettingSwitchPreference from CyanogenMod to handle SwitchPreferences

Signed-off-by: Calin <nilac8991@gmail.com>
Signed-off-by: XOSP <nilac8991@gmail.com>

--- a/res/xml/battery_light_settings.xml
+++ b/res/xml/battery_light_settings.xml
@@ -21,12 +21,12 @@
         android:key="general_section"
         android:title="@string/notification_light_general_title">
 
-        <SwitchPreference
+        <com.android.settings.xosp.preferences.SystemSettingSwitchPreference
             android:key="battery_light_enabled"
             android:title="@string/battery_light_title"
             android:defaultValue="@bool/def_battery_light_enabled" />
 
-        <SwitchPreference
+        <com.android.settings.xosp.preferences.SystemSettingSwitchPreference
             android:key="battery_light_pulse"
             android:title="@string/battery_low_pulse_title"
             android:defaultValue="@bool/def_battery_light_pulse"
