--- a/res/xml/notification_light_settings.xml
+++ b/res/xml/notification_light_settings.xml
@@ -21,7 +21,7 @@
         android:key="general_section"
         android:title="@string/notification_light_general_title">
 
-        <SwitchPreference
+        <com.android.settings.xosp.preferences.SystemSettingSwitchPreference
             android:key="notification_light_pulse"
             android:title="@string/notification_light_title" />
 
@@ -37,18 +37,18 @@
         android:key="advanced_section"
         android:title="@string/advanced">
 
-        <SwitchPreference
+        <com.android.settings.xosp.preferences.SystemSettingSwitchPreference
             android:key="notification_light_screen_on_enable"
             android:title="@string/notification_light_screen_on"
             android:dependency="notification_light_pulse" />
 
-        <SwitchPreference
+        <com.android.settings.xosp.preferences.SystemSettingSwitchPreference
             android:key="allow_lights"
             android:title="@string/allow_lights_title"
             android:dependency="notification_light_pulse"
             android:defaultValue="true" />
 
-        <SwitchPreference
+        <com.android.settings.xosp.preferences.SystemSettingSwitchPreference
             android:key="notification_light_pulse_custom_enable"
             android:title="@string/notification_light_use_custom"
             android:dependency="notification_light_pulse" />
