--- a/res/layout/dialog_light_settings.xml
+++ b/res/layout/dialog_light_settings.xml
@@ -30,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <com.cosmic.settings.notificationlight.ColorPickerView
+        <com.android.settings.xosp.notificationlight.ColorPickerView
             android:id="@+id/color_picker_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -58,7 +58,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.5" />
 
-            <com.cosmic.settings.notificationlight.ColorPanelView
+            <com.android.settings.xosp.notificationlight.ColorPanelView
                 android:id="@+id/color_panel"
                 android:layout_width="0px"
                 android:layout_height="match_parent"
